PBL/internet_gw.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.main.id

  tags = {Name = "igw-${local.name}"}
}
